--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 <section id="top" class="wrapper style1 align-left" style="min-height: 100vh; display: flex; align-items: center;">
     <div class="inner" style="z-index: 1; position: relative;">
         <h1 style="font-size: 4em; font-weight: 800; color: #d97c39;">PBRC COIN</h1>
-        <p style="font-size: 1.2em; color: #555;">Powered by Sheer Will</p>
+        <p style="font-size: 1.2em; color: #555;">Powered by PBR</p>
 
         <ul class="actions">
             <li><a href="#mint" class="button big wide smooth-scroll-middle" style="background-color: #f4a261; border-radius: 8px;">Mint Now</a></li>
